Fix scrollbar in main nav

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -103,6 +103,10 @@
   }
 }
 
+.main-nav {
+  overflow: hidden;
+}
+
 // Small screen nav
 
 .main-nav,
